--- a/templet.html
+++ b/templet.html
@@ -10,6 +10,7 @@
     <link href="font/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="style/common.css" rel="stylesheet">
     <link href="style/mui.css" rel="stylesheet">
+    <link href="style/animate.min.css" rel="stylesheet">
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/mui.min.js"></script>
     <script src="js/common.js"></script>
