--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         <h1>壹教壹学雅思课堂体系</h1>
         <p>一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～</p>
         <div class="index-system-box">
-            <div class="index-system-card card1">
+            <div class="index-system-card card1 wow bounceInLeft">
                 <img src="img/index/icon-1.png"  class="system-card-icon">
                 <div class="index-system-card-txt">
                     前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
                 </div>
             </div>
-            <div class="index-system-card card2" >
+            <div class="index-system-card card2 wow bounceInDown" >
                 <img src="img/index/icon-2.png" class="system-card-icon">
                 <div class="index-system-card-txt">
                     前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
                 </div>
             </div>
-            <div class="index-system-card card3">
+            <div class="index-system-card card3 wow bounceInRight">
                 <img src="img/index/icon-3.png" class="system-card-icon">
                 <div class="index-system-card-txt">
                     前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
@@ -143,7 +143,9 @@
     </div>
 </div>
 
+<script src="js/wow.js"></script>
 <script>
+    new WOW().init();
     $(document).ready(function(){
         var icon = $("img.system-card-icon");
         icon.hover(function(){
