--- a/reg-waiting.html
+++ b/reg-waiting.html
@@ -32,13 +32,21 @@
     </nav>
 </header>
 <!--私有样式-->
-
+<link href="style/register.css" rel="stylesheet">
 <!-- 页面内容 -->
 <div class="wrap">
-
+    <div class="reg-banner"></div>
+    <div class="reg-box" style="padding-top: 100px">
+        <div class="img-block"></div>
+        <p class="reg-txt">请等待老师回访，尽快回答你的问题。</p>
+    </div>
 </div>
 <!--私有JS-->
-
+<script>
+    $(document).ready(function(){
+        $('html,body').animate({scrollTop: '330px'}, 500);
+    })
+</script>
 <!--底部导航-->
 <div class="footer">
     <div class="footer-container">
