--- a/teaching-system.html
+++ b/teaching-system.html
@@ -25,7 +25,6 @@
                 <a href="closed-courses.html"><li>封闭课程</li></a>
                 <a href="teaching-system.html"><li>教学体系</li></a>
                 <a href="teachers.html"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
-                <a href="exploits.html"><li>战报战绩</li></a>
             </ul>
         </div>
         <div class=" nav-btn"><i class="fa fa-bars"></i></div>
@@ -37,7 +36,7 @@
 <div class="wrap">
     <div class="system-banner-box">
         <div class="section-container">
-            <div style="float: right">
+            <div class="system-banner-txt">
                 <div class="system-banner-top">
                     成千上万的雅思学员选择壹教壹学的课程，<br/>
                     帮你有效提升英语语言能力，提高雅思分数！
@@ -85,7 +84,7 @@
     <div class="system-part system-part3">
         <div class="section-container">
             <p class="title">正课</p>
-            <img src="img/teaching-system/ts-block.png" style="width: 100%">
+            <img src="img/teaching-system/ts-block.png" style="width: 100%" class="ts-block">
             <div class="zk-box zk-box1">
                 <div class="zk-box-left">
                     <img src="img/teaching-system/earphone.png">
@@ -145,7 +144,6 @@
             <a><li class="mui--divider-right">封闭课程</li></a>
             <a><li class="mui--divider-right">教学体系</li></a>
             <a><li class="mui--divider-right">名师</li></a>
-            <a><li >战报战绩</li></a>
         </ul>
     </div>
 </div>
