--- a/reg-pay.html
+++ b/reg-pay.html
@@ -36,9 +36,14 @@
 <!-- 页面内容 -->
 <div class="wrap">
     <div class="reg-banner"></div>
-    <div class="reg-box" style="padding-top: 100px">
-        <img src="img/alipay.png" style="width: 220px; ">
-        <p class="pay-txt">你需要支付学费<span>1000</span>元</p>
+    <div class="reg-box">
+        <ul class="reg-step-bar">
+            <li>1 填写报名信息</li>
+            <li style="background: #e58538;color: #fff;">2 报名须知</li>
+            <li>3 报名成功</li>
+        </ul>
+        <img src="img/alipay.png" style="width: 220px;margin-top: 80px ">
+        <p class="pay-txt">你需要支付学费<span class="reg-pay-num">1000</span>元</p>
         <div class="form-btn pay-btn">立即支付</div>
     </div>
 </div>
