--- a/reg-waiting.html
+++ b/reg-waiting.html
@@ -35,9 +35,11 @@
 <link href="style/register.css" rel="stylesheet">
 <!-- 页面内容 -->
 <div class="wrap">
-    <div class="reg-banner"></div>
-    <div class="reg-box" style="padding-top: 100px">
-        <div class="img-block"></div>
+    <div class="reg-banner">
+        <img src="img/register/reg-banner-logo.png" >
+    </div>
+    <div class="reg-box" style="padding-top: 55px">
+        <img src="img/register/face-wait.png" class="reg-face" style="margin-bottom: 67px;">
         <p class="reg-txt">请等待老师回访，尽快回答你的问题。</p>
     </div>
 </div>
