--- a/reg-sign.html
+++ b/reg-sign.html
@@ -35,11 +35,13 @@
 <link href="style/register.css" rel="stylesheet">
 <!-- 页面内容 -->
 <div class="wrap">
-    <div class="reg-banner"></div>
+    <div class="reg-banner">
+        <img src="img/register/reg-banner-logo.png">
+    </div>
     <div class="reg-box">
         <ul class="reg-step-bar">
             <li style="background: #e58538;color: #fff;">1 填写报名信息</li>
-            <li>2 支付学费</li>
+            <li>2 报名须知</li>
             <li>3 报名成功</li>
         </ul>
         <section class="reg-form">
