--- a/index.html
+++ b/index.html
@@ -45,24 +45,27 @@
 <div class="section section2">
     <div class="section-container">
         <h1>壹教壹学雅思课堂体系</h1>
-        <p>一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～一大段介绍文字～</p>
+        <p style="text-indent: 2em">系统性，个性化，学后的练习。让学员不仅仅提到必要的正课理论和知识点，并且在“听”之外的“练”中得到的提升，诠释了“壹教壹学”的含义。</p>
         <div class="index-system-box">
             <div class="index-system-card card1 wow fadeInLeft">
+                <h1>前期预习</h1>
                 <img src="img/index/icon-1.png"  class="system-card-icon">
                 <div class="index-system-card-txt">
                     前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
                 </div>
             </div>
             <div class="index-system-card card2 wow fadeInDown" >
+                <h1>正课</h1>
                 <img src="img/index/icon-2.png" class="system-card-icon">
                 <div class="index-system-card-txt">
-                    前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
+                    课程体系追求系统性提高，从听说读写四个方面，输入和输出项针对性设置学员应该掌握的知识点和考试技能。
                 </div>
             </div>
             <div class="index-system-card card3 wow fadeInRight">
+                <h1>课后辅导</h1>
                 <img src="img/index/icon-3.png" class="system-card-icon">
                 <div class="index-system-card-txt">
-                    前期预习分为听说读写四块的内容，团队老师将会进行网络指导，授课，检查。
+                    个性化的设置允许大课之余，针对每位学员的不同情况，辅导课老师安排差异化的学习内容和考察方式，真正得到提升。
                 </div>
             </div>
         </div>
@@ -185,7 +188,7 @@
 </div>
 <!--回到顶部-->
 <div class="back-top">
-    <i class="fa fa-rocket"></i>
+    <i class="fa fa-chevron-up back-top-icon"></i>
 </div>
 </body>
 </html>
