--- a/online-courses.html
+++ b/online-courses.html
@@ -34,7 +34,9 @@
 <link href="style/online-courses.css" rel="stylesheet">
 <!-- 页面内容 -->
 <div class="wrap">
-    <div class="oc-banner-box"></div>
+    <div class="oc-banner-box">
+        <img src="img/online-courses/banner-txt.png" class="banner-txt">
+    </div>
     <div class="oc-part oc-part1">
         <div class="section-container">
             <p class="title">网络课程概览</p>
@@ -206,6 +208,10 @@
             <a><li class="mui--divider-right">名师</li></a>
         </ul>
     </div>
+</div>
+<!--回到顶部-->
+<div class="back-top">
+    <i class="fa fa-chevron-up back-top-icon"></i>
 </div>
 </body>
 </html>
