--- a/teachers.html
+++ b/teachers.html
@@ -39,7 +39,10 @@
 <link rel="stylesheet" href="style/teachers.css">
 <!-- 页面内容 -->
 <div class="wrap">
-    <div class="banner-box"></div>
+    <div class="banner-box">
+        <img src="img/teachers/teacher-banner-txt.png" class="banner-txt">
+        <a href="#"><img src="img/index/banner-circle.png" class="banner-circle"></a>
+    </div>
     <div class="teacher-part-2">
         <div class="section-container">
             <img src="img/teachers/2.png" style="width: 90%">
@@ -303,6 +306,10 @@
             <a><li >战报战绩</li></a>
         </ul>
     </div>
+</div>
+<!--回到顶部-->
+<div class="back-top">
+    <i class="fa fa-chevron-up back-top-icon"></i>
 </div>
 </body>
 </html>
