--- a/teaching-system.html
+++ b/teaching-system.html
@@ -42,7 +42,7 @@
                     帮你有效提升英语语言能力，提高雅思分数！
                 </div>
                 <div class="system-banner-bot">
-                    无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平无论你要什么雅思分数，处于何种英语水平
+                    无论你要什么雅思分数，处于何种英语水平，壹教壹学有信心帮你达成目标。来自全国的拥有多名超过10年教学经验的雅思教研团队，按照雅思官方评分标准，听说读写全面覆盖的教学内容，针对中国学生雅思英语学习的错误方法，提出正确的学习方法，最终提高英语能力和雅思分数。
                 </div>
             </div>
         </div>
@@ -147,6 +147,9 @@
         </ul>
     </div>
 </div>
-
+<!--回到顶部-->
+<div class="back-top">
+    <i class="fa fa-chevron-up back-top-icon"></i>
+</div>
 </body>
 </html>
