--- a/reg-pay.html
+++ b/reg-pay.html
@@ -70,8 +70,9 @@
     </div>
 </div>
 <!--回到顶部-->
+<!--回到顶部-->
 <div class="back-top">
-    <i class="fa fa-rocket"></i>
+    <i class="fa fa-chevron-up back-top-icon"></i>
 </div>
 
 </body>
