--- a/templet.html
+++ b/templet.html
@@ -57,7 +57,7 @@
 </div>
 <!--回到顶部-->
 <div class="back-top">
-    <i class="fa fa-rocket"></i>
+    <i class="fa fa-chevron-up back-top-icon"></i>
 </div>
 
 </body>
