--- a/teachers.html
+++ b/teachers.html
@@ -43,11 +43,11 @@
         <img src="img/teachers/teacher-banner-txt.png" class="banner-txt">
         <a href="#"><img src="img/index/banner-circle.png" class="banner-circle"></a>
     </div>
-    <div class="teacher-part-2">
-        <div class="section-container">
-            <img src="img/teachers/2.png" style="width: 90%">
-        </div>
-    </div>
+    <!--<div class="teacher-part-2">-->
+        <!--<div class="section-container">-->
+            <!--<img src="img/teachers/2.png" style="width: 90%">-->
+        <!--</div>-->
+    <!--</div>-->
     <div class="teacher-box section-container">
         <p class="title">听力招牌教师</p>
         <img src="img/divide-line.png" class="divide-img">
