--- a/online-courses.html
+++ b/online-courses.html
@@ -48,7 +48,7 @@
     </div>
     <div class="oc-part oc-part2">
         <div class="section-container">
-            <p class="title orange">精品技巧班</p>
+            <p class="title" style="color: #fff;" >精品技巧班</p>
             <img class="divide-img" src="img/divide-line.png">
             <div class="oc-card-box">
                 <div class="oc-card">
@@ -144,7 +144,7 @@
     </div>
     <div class="oc-part oc-part4">
         <div class="section-container">
-            <p class="title orange">提分结构班</p>
+            <p class="title" style="color: #fff;">提分结构班</p>
             <img class="divide-img" src="img/divide-line.png">
             <div class="oc-card-box">
                 <div class="oc-card">
