--- a/closed-courses.html
+++ b/closed-courses.html
@@ -1,10 +1,163 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>壹教壹学</title>
+    <!-- Bootstrap -->
+    <link href="font/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style/common.css" rel="stylesheet">
+    <link href="style/mui.css" rel="stylesheet">
+    <link href="style/animate.min.css" rel="stylesheet">
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/mui.min.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body>
+<header class="navbar">
+    <nav class="navbar-wrap">
+        <a href="index.html"><div class="nav-logo"></div></a>
+        <div class="nav-list">
+            <ul>
+                <a href="index.html"><li>首&nbsp;&nbsp;&nbsp;&nbsp;页</li></a>
+                <a href="online-courses.html"><li>网络课程</li></a>
+                <a href="closed-courses.html"><li>封闭课程</li></a>
+                <a href="teaching-system.html"><li>教学体系</li></a>
+                <a href="teachers.html"><li>名&nbsp;&nbsp;&nbsp;&nbsp;师</li></a>
+            </ul>
+        </div>
+        <div class=" nav-btn"><i class="fa fa-bars"></i></div>
+    </nav>
+</header>
+<!--私有样式-->
+<link rel="stylesheet" href="style/closed-courses.css">
+<!-- 页面内容 -->
+<div class="wrap">
+    <!--banner-->
+    <section class="cc-banner-box">
+        <a href="#"><img src="img/closed-courses/cc-banner-title.png"></a>
+    </section>
+
+    <!--part1-->
+    <section class="cc-part cc-part-1">
+        <div class="section-container">
+            <ul>
+                <li>
+                    <i class="cc-icon-clock" style="margin: 30px 20px;
+"></i>
+                    <p>2015年<span class="yellow">12月5日</span>报道，6-17日上课，18日离开。
+                        其中前期有预习工作，后期有20小时封闭班专属的网络加强补丁课。</p>
+                </li>
+                <li>
+                    <i class="cc-icon-local"></i>
+                    <p><span class="yellow">北京</span>郊区某培训中心</p>
+                </li>
+                <li>
+                    <i class="cc-icon-pen"></i>
+                    <p>请咨询微信 tuyaunion<br/>或电话：<span class="yellow">010-56277735</span></p>
+                </li>
+                <li>
+                    <a class="toreg-btn">点击报名</a>
+                </li>
+            </ul>
+            <img src="img/closed-courses/cake.png" class="cake-img">
+        </div>
+    </section>
+
+    <!--part2-->
+    <section class="cc-part cc-part-2" style="padding-top: 25px">
+        <div class="section-container">
+            <p class="cc-title" style="color: #e48637">我们教什么？</p>
+            <ul>
+                <li>
+                    <img src="img/closed-courses/suit-1.png">
+                    <div class="blue-divide"></div>
+                    <p>雅思成绩千年5分，<br/>
+                        但已经报名最近2个月考试</p>
+                </li>
+                <li>
+                    <img src="img/closed-courses/suit-2.png">
+                    <div class="blue-divide"></div>
+                    <p>想结识日后一起出国的小伙伴，并挖掘自身潜力</p>
+                </li>
+                <li>
+                    <img src="img/closed-courses/suit-3.png">
+                    <div class="blue-divide"></div>
+                    <p>学习有拖延症；<br/>
+                        懒癌晚期重症；</p>
+                </li>
+                <li>
+                    <img src="img/closed-courses/suit-4.png">
+                    <div class="blue-divide"></div>
+                    <p>AG类学员都适合。封闭班期间会为G类学员单独设置阅读和小作文的辅导。G类学员学费21800元。</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!--part3-->
+    <section class="cc-part cc-part-3">
+        <div class="section-container">
+            <p class="cc-title" style="color: #fff">为什么选择我们的面授封闭班？</p>
+            <ul>
+                <li>
+                    <img src="img/closed-courses/reason-1.png">
+                    <p>强大的教学教研团队，全面提高的教学体系</p>
+                    <a href="#">在线报名</a>
+                </li>
+                <li>
+                    <img src="img/closed-courses/reason-2.png">
+                    <p>玲琅满目的复习资料让你无法判断什么是正确的学习方法。</p>
+                    <a href="#">在线报名</a>
+                </li>
+                <li>
+                    <img src="img/closed-courses/reason-3.png">
+                    <p>强大的教学教研团队，全面提高的教学体系</p>
+                    <a href="#">在线报名</a>
+                </li>
+                <li>
+                    <img src="img/closed-courses/reason-4.png">
+                    <p>强大的教学教研团队，全面提高的教学体系</p>
+                    <a href="#">在线报名</a>
+                </li>
+                <li>
+                    <img src="img/closed-courses/reason-5.png">
+                    <p>强大的教学教研团队，全面提高的教学体系</p>
+                    <a href="#">在线报名</a>
+                </li>
+                <li>
+                    <img src="img/closed-courses/reason-6.png">
+                    <p>强大的教学教研团队，全面提高的教学体系</p>
+                    <a href="#">在线报名</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+</div>
+<!--私有JS-->
+
+<!--底部导航-->
+<div class="footer">
+    <div class="footer-container">
+        <p>&copy;壹教壹学公司版权所有</p>
+        <p>电话：123456789</p>
+        <p>地址：啊啊啊啊啊啊啊啊啊啊</p>
+        <p>文字呃呃呃呃呃呃呃呃呃呃呃呃呃呃</p>
+        <ul>
+            <a><li class="mui--divider-right">首页</li></a>
+            <a><li class="mui--divider-right">网络课程</li></a>
+            <a><li class="mui--divider-right">封闭课程</li></a>
+            <a><li class="mui--divider-right">教学体系</li></a>
+            <a><li class="mui--divider-right">名师</li></a>
+        </ul>
+    </div>
+</div>
+<!--回到顶部-->
+<div class="back-top">
+    <i class="fa fa-chevron-up back-top-icon"></i>
+</div>
 
 </body>
 </html>
