--- a/closed-courses.html
+++ b/closed-courses.html
@@ -135,6 +135,33 @@
             </ul>
         </div>
     </section>
+    <section class="cc-part cc-part-4">
+        <div class="section-container">
+            <p class="cc-title" style="color: #e48637">我们教什么？</p>
+            <ul>
+                <li>
+                    <img src="img/closed-courses/teach-info-1.png">
+                    沉淀多年的教学体系
+                </li>
+                <li>
+                    <img src="img/closed-courses/teach-info-2.png">
+                    沉淀多年的教学体系
+                </li>
+                <li>
+                    <img src="img/closed-courses/teach-info-3.png">
+                    沉淀多年的教学体系
+                </li>
+                <li>
+                    <img src="img/closed-courses/teach-info-4.png">
+                    沉淀多年的教学体系
+                </li>
+                <li>
+                    <img src="img/closed-courses/teach-info-5.png">
+                    沉淀多年的教学体系
+                </li>
+            </ul>
+        </div>
+    </section>
 </div>
 <!--私有JS-->
 
