--- a/closed-courses.html
+++ b/closed-courses.html
@@ -135,6 +135,8 @@
             </ul>
         </div>
     </section>
+
+    <!--part4-->
     <section class="cc-part cc-part-4">
         <div class="section-container">
             <p class="cc-title" style="color: #e48637">我们教什么？</p>
@@ -161,6 +163,165 @@
                 </li>
             </ul>
         </div>
+    </section>
+
+    <!--part5-->
+    <section class="cc-part cc-part-5">
+        <div class="section-container">
+            <p class="cc-title">每天课表是怎样的？</p>
+            <ul>
+                <li>
+                    <img src="img/closed-courses/food-burger.png" class="burger">
+                    7:30-7:50<br/>
+                    早餐自助－吃饱吃好<br/>
+                    8:00-8:50<br/>
+                    早读－开开嗓，大声说<br/>
+                    9:00-11:00<br/>
+                    正课<br/>
+                    11：10-12:00<br/>
+                    模考或教师答疑
+                </li>
+                <li>
+                    <img src="img/closed-courses/food-chicken.png" class="chicken">
+                    12:00-12:30<br/>
+                    午餐——不定期更换午餐<br/>
+                    12:30-14:00<br/>
+                    午休——话说“中午不睡下午崩溃”<br/>
+                    14:00-16:00<br/>
+                    正课<br/>
+                    16:20-18:20<br/>
+                    正课
+                </li>
+                <li>
+                    <img src="img/closed-courses/food-soup.png" class="soup">
+                    18:20-19:00<br/>
+                    晚餐——婚宴标准，慰劳自己<br/>
+                    19:10-21:10<br/>
+                    模考，教师答疑<br/>
+                    21:10-22:00<br/>
+                    晚自习<br/>
+                    22:00-23:00<br/>
+                    洗漱<br/>
+                    23:00后不超过24点哦<br/>
+                    休息<br/>（常常需要老师赶大家回去睡觉）
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!--part6-->
+    <section class="cc-part cc-part-6">
+        <div class="section-container">
+            <p class="cc-title" style="color: #e95714">看看我们的教师团队</p>
+            <ul>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+                <li class="teacher-list">
+                    <div class="teacher-left">
+                        <img src="img/closed-courses/teacher-img.png">
+                    </div>
+                    <div class="teacher-right">
+                        <h1>陈好老师</h1>
+                        <p>老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍老师介绍</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!--part7-->
+    <section class="cc-part cc-part-7">
+        <div class="section-container">
+            <p class="cc-title">吃住环境抢先看</p>
+        </div>
+    </section>
+
+    <!--part8-->
+    <section class="cc-part cc-part-8">
+        <div class="section-container">
+            <img src="img/closed-courses/sing-step.png">
+        </div>
+    </section>
+
+    <!--part9-->
+    <section class="cc-part cc-part-9">
+        <div class="class-view">
+            <p>课堂情况和笔记一览</p>
+        </div>
+        <a href="#">
+            <div class="gosign-block">点击报名</div>
+        </a>
+
     </section>
 </div>
 <!--私有JS-->
