--- a/closed-courses.html
+++ b/closed-courses.html
@@ -303,6 +303,72 @@
     <section class="cc-part cc-part-7">
         <div class="section-container">
             <p class="cc-title">吃住环境抢先看</p>
+            <div class="shelf-wrap">
+                <div class="shelf">
+                    <div class="shelf-container">
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-1.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-2.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-3.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="shelf">
+                    <div class="shelf-container">
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-4.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-5.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-6.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="shelf">
+                    <div class="shelf-container">
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-7.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-8.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-9.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="shelf">
+                    <div class="shelf-container">
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-10.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-11.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                        <div class="shelf-card">
+                            <img class="shelf-card-img" src="img/closed-courses/con-12.png">
+                            <p>一行字一行字一行字</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
